# api/openapi/openapi-bundle.yaml
@@ -108,6 +108,19 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /auth/me:
+    get:
+      operationId: getMe
+      summary: サインインしている自身の情報を取得します。
+      security:
+        - cookieAuth: []
+      response:
+        '200':
+          description: 自身の情報
+          content:
+            application/json:
+              schema:
+                $ref: ../../openapi.yaml#/components/schemas/MeResponse
   /photos/{photoId}:
     get:
       operationId: getPhoto
@@ -206,6 +219,19 @@ components:
       required:
         - myId
         - password
+    MeResponse:
+      type: object
+      properties:
+        userId:
+          type: integer
+        myId:
+          type: string
+        isAdmin:
+          type: bool
+      required:
+        - userId
+        - myId
+        - isAdmin
     GetPhotoListResponse:
       properties:
         items:
